syntax = "proto3";

option csharp_namespace = "MartianRobotsService.Protos";

package MartianRobots;

service MartianRobotsCommand {
  rpc GridInitialize (GridInitParameters) returns (CommandResult);
  rpc RobotActivate (RobotInitParameters) returns (CommandResult);
  rpc RobotMove (RobotMoveInstruction) returns (CommandResult);
  rpc RobotTurn (RobotTurnInstruction) returns (CommandResult);
  rpc BatchCommand (BatchInstructions) returns (CommandResult);
}

message GridInitParameters {
  string vector = 1;
}

message RobotInitParameters {
  string coordinates = 1;
}

message RobotMoveInstruction {
  string moveInstruction = 1;
}

message RobotTurnInstruction {
  string turnInstruction = 1;
}

message BatchInstructions {
  string batch = 1;
}

message CommandResult {
  string result = 1;
}